/*
 * Copyright Â© 2023- Gimlet Labs, Inc.
 * All Rights Reserved.
 *
 * NOTICE:  All information contained herein is, and remains
 * the property of Gimlet Labs, Inc. and its suppliers,
 * if any.  The intellectual and technical concepts contained
 * herein are proprietary to Gimlet Labs, Inc. and its suppliers and
 * may be covered by U.S. and Foreign Patents, patents in process,
 * and are protected by trade secret or copyright law. Dissemination
 * of this information or reproduction of this material is strictly
 * forbidden unless prior written permission is obtained from
 * Gimlet Labs, Inc.
 *
 * SPDX-License-Identifier: Proprietary
 */

syntax = "proto3";

// buf:lint:ignore PACKAGE_LOWER_SNAKE_CASE
package gml.testing;

option go_package = "gimletlabs.ai/gimlet/src/shared/testing/testpb";

message PingRequest {
  string req = 1;
}

message PingResponse {
  string reply = 1;
}

message PingClientStreamRequest {
  string req = 1;
}

message PingClientStreamResponse {
  string reply = 1;
}

message PingServerStreamRequest {
  string req = 1;
}

message PingServerStreamResponse {
  string reply = 1;
}

service PingService {
  // Sends a greeting
  rpc Ping(PingRequest) returns (PingResponse);
  rpc PingClientStream(stream PingClientStreamRequest) returns (PingClientStreamResponse);
  rpc PingServerStream(PingServerStreamRequest) returns (stream PingServerStreamResponse);
}
